--- a/output.css
+++ b/output.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: currentColor;
+  border-color: #e5e7eb;
   /* 2 */
 }
 
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -563,32 +567,40 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mr-16 {
   margin-right: 4rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .inline-block {
@@ -599,12 +611,16 @@ video {
   display: flex;
 }
 
+.w-\[220px\] {
+  width: 220px;
+}
+
 .w-\[50px\] {
   width: 50px;
 }
 
-.w-\[220px\] {
-  width: 220px;
+.w-full {
+  width: 100%;
 }
 
 .max-w-5xl {
@@ -613,6 +629,10 @@ video {
 
 .max-w-\[600px\] {
   max-width: 600px;
+}
+
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 
 .list-disc {
@@ -635,38 +655,18 @@ video {
   justify-content: space-between;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-7 {
-  gap: 1.75rem;
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-8 {
   gap: 2rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.space-y-10 > :not([hidden]) ~ :not([hidden]) {
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
@@ -675,8 +675,32 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-zinc-100 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(244 244 245 / var(--tw-border-opacity));
+}
+
+.border-b-gray-100 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .bg-\[\#E5EAE1\] {
@@ -707,14 +731,19 @@ video {
   padding-right: 1.75rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .py-3 {
@@ -727,24 +756,37 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-20 {
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-20 {
   padding-top: 5rem;
+}
+
+.pt-60 {
+  padding-top: 15rem;
+}
+
+.pt-48 {
+  padding-top: 12rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pb-20 {
   padding-bottom: 5rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .text-center {
@@ -755,32 +797,34 @@ video {
   font-family: "Paytone One";
 }
 
-.text-\[22px\] {
-  font-size: 22px;
-}
-
-.text-\[34px\] {
-  font-size: 34px;
-}
-
-.text-\[64px\] {
-  font-size: 64px;
-}
-
 .text-\[18px\] {
   font-size: 18px;
-}
-
-.text-\[24px\] {
-  font-size: 24px;
 }
 
 .text-\[28px\] {
   font-size: 28px;
 }
 
+.text-\[34px\] {
+  font-size: 34px;
+}
+
 .text-\[50px\] {
   font-size: 50px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-light {
@@ -791,32 +835,16 @@ video {
   font-weight: 600;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .uppercase {
   text-transform: uppercase;
-}
-
-.leading-3 {
-  line-height: .75rem;
 }
 
 .leading-\[28px\] {
   line-height: 28px;
 }
 
-.leading-tight {
-  line-height: 1.25;
-}
-
 .leading-\[34px\] {
   line-height: 34px;
-}
-
-.leading-\[64px\] {
-  line-height: 64px;
 }
 
 .leading-\[58px\] {
@@ -833,6 +861,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+strong {
+  font-weight: 700;
+}
+
 .hover\:bg-green\/85:hover {
   background-color: rgb(79 112 52 / 0.85);
 }
@@ -841,19 +873,13 @@ video {
   text-decoration-line: underline;
 }
 
-@media (min-width: 640px) {
-  .sm\:text-\[24px\] {
-    font-size: 24px;
-  }
-}
-
 @media (min-width: 768px) {
   .md\:ml-10 {
     margin-left: 2.5rem;
   }
 
-  .md\:flex {
-    display: flex;
+  .md\:basis-1\/2 {
+    flex-basis: 50%;
   }
 
   .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -862,15 +888,15 @@ video {
     margin-bottom: calc(1rem * var(--tw-space-y-reverse));
   }
 
+  .md\:text-\[22px\] {
+    font-size: 22px;
+  }
+
   .md\:text-\[34px\] {
     font-size: 34px;
   }
 
   .md\:text-\[64px\] {
     font-size: 64px;
-  }
-
-  .md\:text-\[22px\] {
-    font-size: 22px;
   }
 }
